--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -106,13 +106,14 @@
     display: flex;
     flex-direction: column;
     gap: 0.8rem;
+
+    padding-bottom: 4.7rem;
 }
 
 @media screen and (min-width: 768px) {
     .main__properties-list{
         flex-direction: row;
         gap: 1.1rem;
-        padding: 0;
     }
 }
 
